--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^8.2.0",
     "dns": "^0.2.2",
     "bcrypt": "^5.0.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "express-session": "^1.17.1"
   },
   "engines": {
     "node": "10.17.0"
