--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dns": "^0.2.2",
     "bcrypt": "^5.0.0",
     "url": "^0.11.0",
-    "express-session": "^1.17.1"
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "engines": {
     "node": "10.17.0"
