--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "url": "^0.11.0",
     "express-session": "^1.17.1",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "cookie-parser": "^1.4.5"
   },
   "engines": {
     "node": "10.17.0"
